--- a/index.html
+++ b/index.html
@@ -56,6 +56,58 @@
         </div>
     </section>
 
+    <section class="container my-5 py-5">
+        <h2 class="text-center mb-5">O que você vai aprender</h2>
+        <div class="row g-4">
+            <div class="col-md-4">
+                <div class="card h-100">
+                    <div class="card-header bg-primary text-white">Módulo 1: HTML & CSS</div>
+                    <div class="card-body">
+                        <ul class="list-unstyled mb-0">
+                            <li>Estrutura básica do HTML</li>
+                            <li>Estilização com CSS</li>
+                            <li>Layouts responsivos</li>
+                            <li>Flexbox e Grid</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
 
+            <div class="col-md-4">
+                <div class="card h-100">
+                    <div class="card-header bg-success text-white">Módulo 2: JavaScript</div>
+                    <div class="card-body">
+                        <ul class="list-unstyled mb-0">
+                            <li>Fundamento da linguagem</li>
+                            <li>Manipulação de DOM</li>
+                            <li>APIs e AJAX</li>
+                            <li>Programação assincrona</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card h-100">
+                    <div class="card-header bg-info text-white">Módulo 3: Frameworks</div>
+                    <div class="card-body">
+                        <ul class="list-unstyled mb-0">
+                            <li>Bootstrap 5</li>
+                            <li>React básico</li>
+                            <li>Node.js introdução</li>
+                            <li>Projetos práticos</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="bg-secondary text-white py-4">
+        <div class="container text-center">
+            <p class="mb-1">&copy; 2025 CursoTech. Todos os direitos reservados.</p>
+            <p class="mb-0">seu-email.senai@cursotech.com | (11) 99999-9999</p>
+        </div>
+    </footer>
 </body>
 </html>
